# scalable_DOGs_master_thesis

./: README.md
C/: CMakeLists.txt  DeformationController.cpp  DeformationController.h  DogEditor.h  ModelState.cpp  ModelState.h  ModelViewer.cpp  ModelViewer.h  main.cpp  old_main.cpp
C/CreasePatterns/: ArrangementDefs.h  CleanArrangement.cpp  CleanArrangement.h  CreasePattern.cpp  CreasePattern.h  CreasePattern2.cpp  CreasePattern2.h  DogBuilder.cpp  DogBuilder.h  DogCreasePattern.cpp  DogCreasePattern.h  DogFromCreasePattern.cpp  DogFromCreasePattern.h  OrthogonalGrid.cpp  OrthogonalGrid.h  PatternBoundary.cpp  PatternBoundary.h  PlanarArrangement.cpp  PlanarArrangement.h  SVGReader.cpp  SVGReader.h
C/Dog/: DeformationController.cpp  DeformationController.h  Dog.cpp  Dog.h  DogLaplacian.cpp  DogLaplacian.h  DogSolver.cpp  DogSolver.h  FineCoarseConversion.cpp  FineCoarseConversion.h  FineCoarseConversion_old.cpp  FineCoarseConversion_old.h
C/Dog/Objectives/: Curve2AffineCommuteConstraint.h  Curve2AffineSymmetriesConstraint.h  CurveAffineSymmetryConstraint.h  CurveInterpolationConstraintsBuilder.cpp  CurveInterpolationConstraintsBuilder.h  CurveTranslationalSymmetryConstraint.h  DogConstraints.cpp  DogConstraints.h  EdgePointConstraints.h  EqualDiagObjective.cpp  EqualDiagObjective.h  FairingObjective.cpp  FairingObjective.h  FoldingAngleConstraints.cpp  FoldingAngleConstraints.h  FoldingAnglePositionalConstraintsBuilder.cpp  FoldingAnglePositionalConstraintsBuilder.h  FoldingDihedralAngleConstraintsBuilder.cpp  FoldingDihedralAngleConstraintsBuilder.h  HEnergy.cpp  HEnergy.h  IsometryObjective.cpp  IsometryObjective.h  LaplacianSimilarity.cpp  LaplacianSimilarity.h  LinearConstraints.cpp  LinearConstraints.h  MVFoldingDihedralAngleConstraintsBuilder.cpp  MVFoldingDihedralAngleConstraintsBuilder.h  MVTangentCreaseAngleConstraints.h  PairedBoundaryVerticesBendingObjective.cpp  PairedBoundaryVerticesBendingObjective.h  PointsRigidAlignmentObjective.cpp  PointsRigidAlignmentObjective.h  PositionalConstraintsBuilder.cpp  PositionalConstraintsBuilder.h  ProxJADMMObjective.cpp  ProxJADMMObjective.h  ProximalObjective.cpp  ProximalObjective.h  (+9 more)
C/Dog/Solvers/: DOGFlowAndProject.cpp  DOGFlowAndProject.h  DOGGuess.cpp  DOGGuess.h  GeneralizedProcrustes.cpp  GeneralizedProcrustes.h  LaplacianPreconditioner.h  Newton.h  NewtonKKT.cpp  NewtonKKT.h
C/Folding/: CurvedFoldingBiasObjective.cpp  CurvedFoldingBiasObjective.h  CurvedFoldingBiasSignObjective.cpp  CurvedFoldingBiasSignObjective.h  FoldingBinormalBiasConstraints.cpp  FoldingBinormalBiasConstraints.h  FoldingMVBiasConstraints.cpp  FoldingMVBiasConstraints.h  MVFolds.cpp  MVFolds.h  MountainValleyConstraints.cpp  MountainValleyConstraints.h  ReflectionFolds.cpp  ReflectionFolds.h
C/GeometryPrimitives/: Curve.cpp  Curve.h  LinearTransformations.cpp  LinearTransformations.h
C/Gui/: DogEditor.cpp  DogEditor.h  EditingUtils.cpp  Editor.cpp  Editor.h  Lasso.cpp  Lasso.h  Rendering.cpp  Rendering.h
C/Optimization/: CompositeConstraints.h  CompositeObjective.h  Constraints.h  EdgePointConstraints.h  EdgesAngleConstraints.h  Objective.cpp  Objective.h  PointPairConstraints.h  PositionalConstraints.h  QuadraticConstraintsSum.h  QuadraticConstraintsSumObjective.h  Solver.h  SumOfQuadraticConstraints.h  line_search.cpp  line_search.h
C/Optimization/Solvers/: EqSQP.cpp  EqSQP.h  FeasibleIneqInteriorPoint.cpp  FeasibleIneqInteriorPoint.h  GeneralizedProcrustes.h  IpOptSolver.cpp  IpOptSolver.h  LBFGS.cpp  LBFGS.h  LBFGSWithPenalty.cpp  LBFGSWithPenalty.h  Newton.h  NewtonKKT.cpp  NewtonKKT.h  PardisoSolver.cpp
C/Optimization/Solvers/lbfgs/: LBFGSSolver.h  LineSearch.h  Param.h
C/QuadMesh/: Edge.h  Quad.h
C/crease_patterns/: DogCreasePattern.h  PlanarArrangement.h
C/objectives/: Constraints.h  Objective.h
optimization_obj_symbolic_matlab/: AffineCommuteConst.m  Bending_squared_integrated_E  Bending_squared_integrated_G  Bending_squared_integrated_H  Bending_squared_integrated_bnd_E  Bending_squared_integrated_bnd_G  Bending_squared_integrated_bnd_H  DOG_Const_Hessian  DOG_Const_Hessian_bnd  DOG_Constraints_vals  DOG_Jacobian  DOG_const.m  DOG_const_quad.m  DOG_const_quad_Jacobian  DOG_const_quad_JacobianBnd3  DOG_quad_Constraints_vals  DOG_quad_Constraints_vals_Bnd3  DOG_quad_E  DOG_quad_G  DOG_quad_bnd3_E  DOG_quad_bnd3_G  DOG_quad_e.m  (+100 more)
(+105 files in other folders)
